<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2016 Pedro Rodrigues
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="3"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view"
        android:orderInCategory="4"
        android:title="@string/menu_view"
        app:showAsAction="never">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/menu_home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/menu_special"
                    android:title="@string/menu_special" />
                <item
                    android:id="@+id/menu_hands_on"
                    android:title="@string/menu_hands_on" />
                <item
                    android:id="@+id/menu_review"
                    android:title="@string/menu_review" />
                <item
                    android:id="@+id/menu_game"
                    android:title="@string/menu_game" />

            </group>

        </menu>

    </item>

    <item
        android:id="@+id/action_night"
        android:orderInCategory="5"
        android:title="@string/menu_night_mode"
        app:showAsAction="never">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/menu_night_mode_system"
                    android:title="@string/menu_night_mode_system" />
                <item
                    android:id="@+id/menu_night_mode_day"
                    android:title="@string/menu_night_mode_day" />
                <item
                    android:id="@+id/menu_night_mode_night"
                    android:title="@string/menu_night_mode_night" />
                <item
                    android:id="@+id/menu_night_mode_auto"
                    android:title="@string/menu_night_mode_auto" />

            </group>

        </menu>

    </item>

</menu>